Bug 296810 - KMultiTabBar: Does not correctly handle Mac font sizes
Summary: KMultiTabBar: Does not correctly handle Mac font sizes
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: 4.10.90
Platform: MacPorts macOS
: NOR minor
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 258279 333049 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-26 12:14 UTC by Anton Rasmussen
Modified: 2016-06-09 17:13 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenschot from Kile on OSX showing overlapping elements (87.80 KB, image/png)
2012-03-26 12:16 UTC, Anton Rasmussen
Details
Screenshot of the open dialog showing overlapping elements (46.75 KB, image/png)
2012-03-26 12:17 UTC, Anton Rasmussen
Details
Proposed patch (619 bytes, patch)
2014-08-20 20:28 UTC, Christoph Feck
Details
Widget-style-changed (488.07 KB, image/png)
2015-05-12 18:31 UTC, Pepik1978
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anton Rasmussen 2012-03-26 12:14:54 UTC
User-Agent:       Mozilla/5.0 (Macintosh; Intel Mac OS X 10_7_3) AppleWebKit/535.11 (KHTML, like Gecko) Chrome/17.0.963.83 Safari/535.11
Build Identifier: 

When building KDE 4.8.1 from macports, some GUI elements are overlapping. It seems to happen only for elements wich have both text and some sort of icon placed next to each other in the text direction.
I have seen this in previous versions as well.
Building with variants +no_x11 +quartz +qt4

Reproducible: Always

Steps to Reproduce:
1. Build KDE from macports
Comment 1 Anton Rasmussen 2012-03-26 12:16:42 UTC
Created attachment 69901 [details]
Screenschot from Kile on OSX showing overlapping elements
Comment 2 Anton Rasmussen 2012-03-26 12:17:34 UTC
Created attachment 69902 [details]
Screenshot of the open dialog showing overlapping elements
Comment 3 Christoph Feck 2012-03-27 23:50:40 UTC
Michael, in the Kile screen shot, which widget do you use for the view selectors?
Comment 4 Michel Ludwig 2012-03-29 11:32:12 UTC
That's a KMultiTabBar. All the code can be found in

https://projects.kde.org/projects/extragear/office/kile/repository/revisions/master/entry/src/widgets/sidebar.cpp
Comment 5 Christoph Feck 2013-07-08 02:21:46 UTC
*** Bug 258279 has been marked as a duplicate of this bug. ***
Comment 6 Marko Käning 2014-04-05 14:58:35 UTC
see bug 333049 for another screenshot taken kate
Comment 7 Marko Käning 2014-04-09 23:50:00 UTC
*** Bug 333049 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2014-08-20 20:28:31 UTC
Created attachment 88336 [details]
Proposed patch

Marko, if you are still on kdelibs4, could you test this patch (backport of the one from the review request)?
Comment 9 Marko Käning 2014-08-20 20:31:55 UTC
(In reply to Christoph Feck from comment #8)
> Marko, if you are still on kdelibs4, could you test this patch (backport of
> the one from the review request)?

Yes, I am still also working on KDE4, will do it as soon as my KF5 virtual OSX/CI machine is free to revive the Qt4/KDE4 system. Thanks for the patch!
Comment 10 Marko Käning 2014-08-21 22:21:12 UTC
Christoph, I am sorry, but I have to say there was no change in the layout!
The controls are still overlapping with this patch as they did 2 years ago.
That is, if my assumption was correct that I do NOT need to re-build kate
from source after installing the patched kdelibs version...
---
However, when I DO re-build kate - after patching kdelibs - I see the
strange effect that all KMultiTabBars *disappear* completely from the
application! The tool views menu suddenly has only a single entry, i.e. 
    "View/Tool Views/Show Sidebars",
the other 4 entries - previously below an extra separator - have vanished
for some reason.
Comment 11 Marko Käning 2014-09-28 18:26:59 UTC
Hi there, any idea about how to proceed with this now?
Comment 12 Christoph Feck 2014-09-28 18:32:09 UTC
No idea. Without being able to use QMacStyle, it is next to impossible to debug.
Comment 13 Marko Käning 2014-10-09 05:51:01 UTC
All this is not an issue if I do NOT use the "Macintosh (aqua)" theme. The standard KDE themes are fine (apart from a redraw glitch in pulldown menus) but best works QtCurve.
Comment 14 caulier.gilles 2015-05-12 11:59:50 UTC
*** Bug 347589 has been marked as a duplicate of this bug. ***
Comment 15 Pepik1978 2015-05-12 18:31:20 UTC
Created attachment 92563 [details]
Widget-style-changed

I tried also on Fedora20, and:
digikam-4.9.0-1.fc20.x86_64
Using KDE Development Platform 4.14.3
Unfortunately there is another bug " The process for the digikamalbums protocol died unexpectedly" In console looks like problems "Failed to list url; Failed to list dates.." I can't to add ANY file there :)(   so I can't reach the right-click menu part (2) from picture: https://bugsfiles.kde.org/attachment.cgi?id=92553
On the other hand, the issue marked as (1) on above attachment is NOT overlapping on F20.

> https://bugs.kde.org/show_bug.cgi?id=347589#c3
> I suspect a problem with KDELibs and widget styles.
> Which one do you use exactly ? Look in Setup/Miscs page.
None was selected as Widget style (even F20 has it empty) - Mac Aqua didn't help (and looks with same overlapping).
Plastique is better - see on scrnsht (and Phase looks also good).
Comment 17 RJVB 2016-06-09 17:13:23 UTC
Git commit 44d6d6cfcfea5060bfe1676840f1df6e86c235e8 by René J.V. Bertin.
Committed on 09/06/2016 at 17:13.
Pushed by rjvbb into branch 'master'.

Fix an alignment issue under the OS X native "macintosh" style

REVIEW: 128005
Committed from host : Portia.local

M  +2    -0    src/kmultitabbar.cpp

http://commits.kde.org/kwidgetsaddons/44d6d6cfcfea5060bfe1676840f1df6e86c235e8