Fix an alignment issue under the OS X native "macintosh" style

REVIEW: 128005
BUG: 296810
Committed from host : Portia.local